# imxrt1062-tflite-micro-mnist

./: .gitignore  README.md  build.sh  docker-build.sh  flash.sh
.circleci/: config.yml
jupyter_notebook/: MNIST-TensorFlow.ipynb
jupyter_notebook/.ipynb_checkpoints/: MNIST-TensorFlow-checkpoint.ipynb
source/: CMakeLists.txt
source/cmake/: armgcc.cmake  cmsis_dsp_lib.cmake  cmsis_nn_lib.cmake  fsl.cmake  tensorflow_lite_micro.cmake
source/config/: FreeRTOSConfig.h  gdb.ini
source/libs/MIMXRT1062/project_template/: board.h
source/libs/cmsis/Include/: cmsis_gcc.h
source/libs/tensorflow/tensorflow/lite/micro/: micro_interpreter.cc
source/src/: main.cpp  pin_mux.c  syscalls.c
source/src/inc/: board.h  dwt_tools.h
